<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtVMessages"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSettings"
        android:layout_alignLeft="@+id/btn"
        android:layout_alignRight="@+id/btn"
        android:layout_below="@+id/btn"
        android:text="@string/txtVDefaultMassage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVMessages"
        android:layout_alignParentBottom="true"
        android:text="@string/bthGoToSettings"
        android:textSize="@dimen/font_size_btn" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtVMessages"
        android:text="@string/bthGoToAbout"
        android:textSize="@dimen/font_size_btn" />

    <Button
        android:id="@+id/btnFever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/btnFever"
        android:textSize="@dimen/font_size_btn" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFever"
        android:layout_centerHorizontal="true"
        android:onClick="getLocation"
        android:text="@string/send_request"
        android:textSize="@dimen/font_size_btn" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSettings"
        android:layout_alignLeft="@+id/txtVMessages"
        android:layout_alignRight="@+id/txtVMessages"
        android:layout_alignTop="@+id/txtVMessages"
        android:layout_marginTop="31dp"
        android:textSize="@dimen/font_size" />

</RelativeLayout>