<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_weight="1.05"
            android:text="@string/rb_woman"
            android:textSize="@dimen/font_size" />

        <RadioButton
            android:id="@+id/rbMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.61"
            android:text="@string/rb_man"
            android:textSize="@dimen/font_size" />

    </RadioGroup>

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_save_settings"
        android:textSize="@dimen/font_size_btn" />

    <TextView
        android:id="@+id/txtVWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:text="@string/title_weitght"
        android:textSize="@dimen/font_size" />

    <EditText
        android:id="@+id/eTxtWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVWeight"
        android:layout_below="@+id/txtVWeight"
        android:ems="10"
        android:inputType="number"
        android:textSize="@dimen/font_size" />

    <TextView
        android:id="@+id/txtVExtrawater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eTxtWeight"
        android:layout_below="@+id/eTxtWeight"
        android:text="@string/title_medicine"
        android:textSize="@dimen/font_size" />

    <EditText
        android:id="@+id/eTxtExtraWater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtVExtrawater"
        android:ems="10"
        android:inputType="number"
        android:textSize="@dimen/font_size" >

        <requestFocus />
    </EditText>

</RelativeLayout>